Removes project & modifies title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <title>Linus / elektronisch.dev</title>
+    <title>Linus / elektr0nisch</title>
     <meta name="viewport" content="initial-scale=1"/>
     <meta name="description" content="Yet another computer enthusiast"/>
     <meta property="og:url" content="https://elektronisch.dev/"/>
@@ -129,13 +129,6 @@
     Herzlich willkommen auf meiner bescheidenen Internetpr&auml;senz!
 </p>
 <h2>Projekte</h2>
-
-<div class="box" style="background-color: orange;">
-    <p>
-        <b><a href="https://paywall.elektronisch.dev">AntiPaywall</a></b> <br/>
-        <span>Schluss mit Bezahlschranken!</span>
-    </p>
-</div>
 
 <div class="box" style="background-color: red;">
     <p>
