Removes a project & modifies title

--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
 
 <body>
 <div style="text-align: center;">
-    <img src="assets/logo.webp" width="640" height="640" alt=""
-         style="width: 30%; height: auto; border-radius: 50%;"/>
+    <img src="assets/logo.webp" width="150" height="150" alt="" style="border-radius: 50%"/>
 </div>
 <h1>Ich bin Linus!</h1>
 <p>
@@ -130,7 +129,7 @@
 </p>
 <h2>Projekte</h2>
 
-<div class="box" style="background-color: red;">
+<div class="box" style="background-color: orchid;">
     <p>
         <b><a href="https://devicekeeper.de">DeviceKeeper.de</a></b> <br/>
         <span>Yet another device management system!</span>
