Add shields & financial support links

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="de">
 <head>
     <title>Linus / elektr0nisch</title>
@@ -125,7 +125,7 @@
 </div>
 <h1>Ich bin Linus!</h1>
 <p>
-    Herzlich willkommen auf meiner bescheidenen Internetpr&auml;senz!
+    Herzlich willkommen auf meiner bescheidenen Internetpräsenz!
 </p>
 <h2>Projekte</h2>
 
@@ -137,11 +137,48 @@
 </div>
 
 <h2>Kontakt</h2>
-<p>
-    <b>E-Mail:</b> <a href="javascript:decryptMail('Y29udGFjdEBlbGVrdHJvbmlzY2guZGV2')">klick mich!</a><br/>
-    <b>Matrix:</b> <a href="https://matrix.to/#/@elektr0nisch:matrix.org">@elektr0nisch:matrix.org</a> <br/>
-    <b>Threema:</b> <a href="https://threema.id/WMU9B4KH">WMU9B4KH</a> <br/>
-</p>
+<div style="text-align: center;">
+    <a href="javascript:decryptMail('Y29udGFjdEBlbGVrdHJvbmlzY2guZGV2')">
+        <img src="https://img.shields.io/badge/✉ e--mail-gray.svg?style=for-the-badge"
+             alt="E-Mail"/>
+    </a>&nbsp;&nbsp;
+    <a href="https://threema.id/WMU9B4KH">
+        <img src="https://img.shields.io/badge/threema-darkblue.svg?logo=threema&style=for-the-badge"
+             alt="Threema"/>
+    </a>&nbsp;&nbsp;
+    <a href="https://matrix.to/#/@elektr0nisch:matrix.org">
+        <img src="https://img.shields.io/badge/matrix-black.svg?logo=matrix&style=for-the-badge"
+             alt="Matrix"/>
+    </a>&nbsp;&nbsp;
+    <br>
+    <a href="https://twitter.com/elektr0nisch">
+        <img src="https://img.shields.io/badge/twitter-elektr0nisch-blue.svg?logo=twitter&style=for-the-badge"
+             alt="Twitter"/>
+    </a>&nbsp;&nbsp;
+    <a href="https://instagram.com/elektr0nisch">
+        <img src="https://img.shields.io/badge/instagram-elektr0nisch-pink.svg?logo=instagram&style=for-the-badge"
+             alt="Instagram"/>
+    </a>&nbsp;&nbsp;
+</div>
+
+<h2>Unterstütze mich</h2>
+<div style="text-align: center;">
+    <p>
+        <a href="https://paypal.me/elektr0nisch">
+            <img src="https://img.shields.io/badge/paypal-spenden-green.svg?logo=paypal&style=for-the-badge"
+                 alt="PayPal"/>
+        </a>&nbsp;&nbsp;
+        <a href="https://buymeacoffee.com/elektr0nisch">
+            <img src="https://img.shields.io/badge/☕ buymeacoffee-spenden-green.svg?style=for-the-badge"
+                 alt="buy me a coffee"/>
+        </a>&nbsp;&nbsp;
+        <a href="https://ko-fi.com/elektr0nisch">
+            <img src="https://img.shields.io/badge/☕ ko--fi-spenden-green.svg?style=for-the-badge"
+                 alt="KoFi"/>
+        </a>
+    </p>
+</div>
+
 <footer>
     <p>&copy; elektronisch.dev - Alle Rechte vorbehalten.</p>
 </footer>
