Adds hyperlink to sourcecode on GitHub

--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
 </div>
 
 <footer>
-    <p>&copy; elektronisch.dev - Alle Rechte vorbehalten.</p>
+    <p>&copy; elektronisch.dev - Alle Rechte vorbehalten.<br/>
+        <small><a href="https://github.com/elektr0nisch/homepage">Quellcode auf GitHub</a></small>
+    </p>
 </footer>
 
 <script>
