--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html lang="de">
 <head>
-    <title>Linus / elektr0nisch</title>
+    <title>Startseite – elektronisch.dev</title>
     <meta name="viewport" content="initial-scale=1"/>
     <meta name="description" content="Yet another computer enthusiast"/>
     <meta property="og:url" content="https://elektronisch.dev/"/>
-    <meta property="og:title" content="Linus / elektr0nisch"/>
+    <meta property="og:title" content="Startseite – elektronisch.dev"/>
     <meta property="og:description" content="Yet another computer enthusiast"/>
-    <meta property="og:image" content="https://elektronisch.dev/assets/logo.png"/>
+    <meta property="og:image" content="https://elektronisch.dev/assets/img/logo.png"/>
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="de_DE"/>
 
@@ -15,113 +15,15 @@
     <meta property="twitter:site" content="@elektr0nisch"/>
     <meta property="twitter:creator" content="@elektr0nisch"/>
 
-    <link rel="shortcut icon" type="image/webp" href="assets/logo.webp"/>
-
-    <style>
-        @font-face {
-            font-family: "Jost";
-            src: url("assets/jost-400.woff2") format("woff2");
-            font-weight: 400;
-            font-display: swap;
-        }
-
-        @font-face {
-            font-family: "Jost";
-            src: url("assets/jost-700.woff2") format("woff2");
-            font-weight: 700;
-            font-display: swap;
-        }
-
-        body {
-            font-family: Jost, sans-serif;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 1em;
-            max-width: 45em;
-            line-height: 1.5em;
-            color: #171717;
-            font-size: large;
-        }
-
-        h1 {
-            background-color: #96ffb9;
-            text-align: center;
-            font-weight: bold;
-            font-size: 2em;
-            line-height: 1.2em;
-            padding: 0.3em;
-        }
-
-        h2 {
-            background-color: #1b7340;
-            color: white;
-            text-align: center;
-            font-weight: bold;
-            font-size: 1.5em;
-            line-height: 1.2em;
-            padding: 0.3em;
-            margin-top: 1em;
-        }
-
-        h3 {
-            margin: 0;
-            padding-left: 0.5em;
-        }
-
-        footer,
-        footer a {
-            color: gray;
-            text-align: center;
-        }
-
-        hr {
-            visibility: hidden;
-        }
-
-        p {
-            padding-left: 0.5em;
-            padding-right: 0.5em;
-        }
-
-        input {
-            opacity: 0;
-            position: absolute;
-        }
-
-        th,
-        td {
-            vertical-align: top;
-        }
-
-        a:not([class]) {
-            text-decoration: none;
-            background-image: linear-gradient(#eeebee 0%, #eeebee 100%);
-            background-repeat: repeat-x;
-            background-position: 0 100%;
-            background-size: 1px 1px;
-        }
-
-        a:not([class]):hover {
-            background-image: linear-gradient(rgba(114, 83, 237, 0.45) 0%, rgba(114, 83, 237, 0.45) 100%);
-            background-size: 1px 1px;
-        }
-
-        .box {
-            position: relative;
-            display: inline-table;
-            height: 4em;
-            width: 100%;
-            line-height: 2em;
-            text-align: center;
-            vertical-align: middle;
-            margin-bottom: 0.5em;
-        }
-    </style>
+    <link rel="shortcut icon" type="image/webp" href="assets/img/logo.webp"/>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
+<div id="fullsize" onclick="this.style.display='none';"></div>
+
 <div style="text-align: center;">
-    <img src="assets/logo.webp" width="150" height="150" alt="" style="border-radius: 50%"/>
+    <img src="assets/img/logo.webp" width="150" height="150" alt="Logo" style="border-radius: 50%"/>
 </div>
 <h1>Ich bin Linus!</h1>
 <p>
@@ -129,12 +31,135 @@
 </p>
 <h2>Projekte</h2>
 
-<div class="box" style="background-color: orchid;">
-    <p>
-        <b><a href="https://devicekeeper.de">DeviceKeeper.de</a></b> <br/>
-        <span>Yet another device management system!</span>
-    </p>
-</div>
+<ul>
+    <li class="box" style="background-color: indianred;">
+        <input type="checkbox" id="devicez">
+        <label for="devicez">
+            <b><a href="https://devicez.de" target="_blank">Devicez</a></b> <br/>
+            <span>Free & open-source device management system</span> <br/>
+            <small>
+                seit Februar 2022<br/>
+                <a>Mehr anzeigen</a>
+            </small>
+        </label>
+        <div class="abstract">
+            <p>
+                <img src="/assets/img/devicez.png" width="256" height="256" alt="Devicez Logo"/><br/>
+                <em>Devicez</em> ist mein neustes Freizeitprojekt. Ziel ist es, ein freies und quelloffenes
+                Geräteverwaltungssystem zu schaffen, das sowohl im Selbst- als auch im Cloud-Betrieb verwendet werden
+                kann.<br/>
+                Derzeit steht das Projekt noch ganz am Anfang. Da ich daran aktuell auch nicht mit höchster Priorität
+                arbeite, kann es auch noch ein wenig dauern, bis ich erste Ergebnisse erziele.
+            </p>
+        </div>
+    </li>
+    <li class="box" style="background-color: dodgerblue;">
+        <input type="checkbox" id="fwa">
+        <label for="fwa">
+            <b><a href="https://waldorf-augsburg.de" target="_blank">Freie Waldorfschule Augsburg</a></b> <br/>
+            <span>Ehrenamtliches IT-Engagement an meiner Schule</span> <br/>
+            <small>
+                seit November 2020<br/>
+                <a>Mehr anzeigen</a>
+            </small>
+        </label>
+        <div class="abstract">
+            <p>
+                <img src="/assets/img/fwa.webp" width="675" height="153" alt="Freie Waldorfschule Augsburg Logo"/><br/>
+                Im November 2020, inmitten der Corona-Pandemie, formierte sich an meiner Schule ein dreiköpfiges
+                Schüler-Team, dass in den nächsten Monaten unglaubliche Arbeit leistete, um dann ab dem 1. Januar 2021
+                stundenplanmäßigen Online-Unterricht anbieten zu können.<br/>
+
+                Zu Beginn richteten wir uns einen provisorischen Arbeitsplatz im Keller der Schule ein, von dem aus die
+                ersten planmäßigen Übertragungen der Hauptunterrichte (ersten zwei Schulstunden an einer Waldorfschule)
+                gemanagt wurden.<br/><br/>
+
+                <img class="fullscreen" src="/assets/img/fwa/it_keller_provisorisch.jpg" width="2560" height="1440"
+                     style="height: 50%; width: 50%"
+                     alt="Provisorische Computerinstallation im Keller der Schule"/>&nbsp;
+
+                <img class="fullscreen" src="/assets/img/fwa/uebertragung_2020.jpg" width="921" height="447"
+                     style="height: 50%; width: 50%"
+                     alt="Computerbildschirm mit Bildungsplattform und VoiceMeeter"/><br/><br/>
+
+                In den nächsten Wochen richteten wir uns einen vernünftigen Arbeitsplatz her und führten zur besseren
+                Aufgabenverwaltung ein Ticket-System ein, dass sehr bald mit Anfragen und Hilferufen überfüllt war.<br/><br/>
+
+                <img class="fullscreen" src="/assets/img/fwa/ticketsystem.png" width="948" height="364"
+                     style="height: 50%; width: 50%"
+                     alt="Übersichtsgraph der hohen Zahl an Tickets"/>&nbsp;
+
+                <img class="fullscreen" src="/assets/img/fwa/it_keller_new.jpg" width="2560" height="1440"
+                     style="height: 50%; width: 50%"
+                     alt="Übersichtsgraph der hohen Zahl an Tickets"/><br/><br/>
+
+                Über die Weihnachtsferien verbesserten wir Hard- und Software und ermöglichten so im neuen Jahr
+                stundenplanmäßigen Online-Unterricht, in Distanz- sowie Hybridform. Eigenentwicklungen wie die
+                Verwaltungssoftware <em>LessonControl</em> und der Einsatz von leistungsfähigen Streaming-Tools wie OBS
+                und VoiceMeeter ermöglichten und die Verwendung von mehreren Audio- und Videoquellen.<br/><br/>
+
+                <img class="fullscreen" src="/assets/img/fwa/online_stundenplan.png" width="1326" height="664"
+                     style="height: 50%; width: 50%"
+                     alt="Online-Stundenplan der 11. Klasse (BBB = BigBlueButton, d.h. dieser Unterricht war online)"/>&nbsp;
+
+                <img class="fullscreen" src="/assets/img/fwa/lessoncontrol.jpg" width="4272" height="2848"
+                     style="height: 50%; width: 50%"
+                     alt="LessonControl Splashscreen"/>&nbsp;
+
+                <img class="fullscreen" src="/assets/img/fwa/lessoncontrol_console.png" width="966" height="898"
+                     style="height: 50%; width: 50%"
+                     alt="Konsole des LessonControl-Servers"/><br/><br/>
+
+                Durch die Schülerunterstützung und die Bereitschaft unserer Schule diese zuzulassen, konnten wir die
+                heißen Phasen der Pandemie gut überstehen und so "normal" wie möglich machen. Durch unseren Einsatz in
+                Pandemiezeiten etablierten wir uns auch in 2022 als <em>Technik-Schüler</em>, die sich bei
+                Veranstaltungen um alles Technische kümmerten und insgesamt die Infrastruktur der Schule
+                pflegen.<br/><br/>
+
+                Für das kommende Schuljahr 2022/23 ist jedoch klar, dass wir uns vor allem auf unser anstehendes Abitur
+                konzentrieren müssen und daher wahrscheinlich kaum noch Zeit finden werden, um technische Hilfe zu
+                leisten. Die zweijährige Ära der drei <em>Technik-Schüler</em> endet!<br/><br/>
+
+                <img class="fullscreen" src="/assets/img/fwa/verabschiedung_2022.webp" width="966" height="898"
+                     style="height: 50%; width: 50%"
+                     alt="Offizielle Verabschiedung der drei Technik-Schüler bei Mitarbeiteressen am 28.07.2022 (V.l.n.r. Geschäftsführer Alexander Mattheus, Sebastian Mach, Tim Zolleis, Linus Groschke)"/><br/><br/>
+
+                Obwohl wir bereits offiziell verabschiedet wurden, werden wir auch dieses Jahr in den Sommerferien noch
+                einiges zutun haben, unser Erbe gut zu hinterlassen.
+            </p>
+        </div>
+    </li>
+    <li class="box" style="background-color: darkorange;">
+        <input type="checkbox" id="cytooxien">
+        <label for="cytooxien">
+            <b><a href="https://cytooxien.de" target="_blank">Cytooxien</a></b> <br/>
+            <span>Spieleentwickler bei großem deutschen Minecraft-Servernetzwerk</span> <br/>
+            <small>
+                von Mai 2020 - September 2021<br/>
+                <a>Mehr anzeigen</a>
+            </small>
+        </label>
+        <div class="abstract">
+            <p>
+                <img src="/assets/img/cytooxien.gif" width="300" height="300" alt="Animiertes Cytooxien Logo"/><br/>
+                Ich war von Mai 2020 bis September 2021 Spieleentwickler bei einem der größten deutschen
+                Minecraft-Servernetzwerke namens <em>Cytooxien</em>. Auf Cytooxien spielten zu Hochzeiten bis zu 2000
+                Spieler gleichzeitig in verschiedenen Spielmodi wie z. B. <em>Bedwars, Mario-Party oder
+                SkyBlock</em>.<br/><br/>
+
+                Dort entwickelte ich vor allem die Spielschnittstelle (Game-API) names <em>Strider</em>, die als
+                Grundimplementation einige generelle Aufgaben wie z. B. die Team-Einteilung übernahm. Neben diesen
+                grundlegenden Aufgaben ermöglicht es Strider unter anderem mehrere voneinander unabhängige
+                Spielrunden auf demselben Minecraft-Server zu betreiben, was eine erhebliche Ressourcenentlastung
+                bedeutete, die Gesamtkapazität an gleichzeitigen Runden erhöhte und eine nie dagewesene
+                Flexibilität ermöglichte.<br/><br/>
+
+                Am 24. September 2021 feierte das Servernetzwerk sein 10-jähriges Bestehen. Wenige Wochen später verließ
+                ich das Entwickler-Team, um mich mehr auf meine Schullaufbahn konzentrieren zu können.
+            </p>
+        </div>
+    </li>
+</ul>
 
 <h2>Kontakt</h2>
 <div style="text-align: center;">
@@ -179,13 +204,48 @@
     </p>
 </div>
 
+<div id="imageModal" class="modal">
+    <span id="close">&times;</span>
+    <img id="modalImage"/>
+    <div id="caption"></div>
+</div>
+
 <footer>
     <p>&copy; elektronisch.dev - Alle Rechte vorbehalten.<br/>
-        <small><a href="https://github.com/elektr0nisch/homepage">Quellcode auf GitHub</a></small>
+        <small>
+            <a href="https://github.com/elektr0nisch/homepage">Quellcode auf GitHub</a><br/>
+            <a href="/impressum">Impressum</a>
+        </small>
     </p>
 </footer>
 
 <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const modal = document.getElementById('imageModal');
+        const images = document.querySelectorAll('.fullscreen');
+        const modalImage = document.getElementById('modalImage');
+        const captionText = document.getElementById('caption');
+
+        images.forEach(img => {
+            img.addEventListener('click', function () {
+                modal.style.display = 'block';
+                modalImage.src = img.src;
+                captionText.innerHTML = this.alt;
+            });
+        });
+
+        let closeSpan = document.getElementById('close');
+        closeSpan.onclick = function () {
+            modal.style.display = 'none';
+        }
+
+        document.onkeydown = function (e) {
+            if (e.key === 'Escape') {
+                modal.style.display = 'none';
+            }
+        };
+    });
+
     function decryptMail(encoded) {
         const address = atob(encoded);
         window.location.href = 'mailto:' + address;
