Fixes some typos

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 Über die Weihnachtsferien verbesserten wir Hard- und Software und ermöglichten so im neuen Jahr
                 stundenplanmäßigen Online-Unterricht, in Distanz- sowie Hybridform. Eigenentwicklungen wie die
                 Verwaltungssoftware <em>LessonControl</em> und der Einsatz von leistungsfähigen Streaming-Tools wie OBS
-                und VoiceMeeter ermöglichten und die Verwendung von mehreren Audio- und Videoquellen.<br/><br/>
+                und VoiceMeeter ermöglichte uns die Verwendung von mehreren Audio- und Videoquellen.<br/><br/>
 
                 <img class="fullscreen" src="/assets/img/fwa/online_stundenplan.png" width="1326" height="664"
                      style="height: 50%; width: 50%"
@@ -111,10 +111,10 @@
                      alt="Konsole des LessonControl-Servers"/><br/><br/>
 
                 Durch die Schülerunterstützung und die Bereitschaft unserer Schule diese zuzulassen, konnten wir die
-                heißen Phasen der Pandemie gut überstehen und so "normal" wie möglich machen. Durch unseren Einsatz in
+                heißen Phasen der Pandemie gut überstehen und so "normal" wie möglich machen. Wegen unseres Einsatzes in
                 Pandemiezeiten etablierten wir uns auch in 2022 als <em>Technik-Schüler</em>, die sich bei
                 Veranstaltungen um alles Technische kümmerten und insgesamt die Infrastruktur der Schule
-                pflegen.<br/><br/>
+                pflegten.<br/><br/>
 
                 Für das kommende Schuljahr 2022/23 ist jedoch klar, dass wir uns vor allem auf unser anstehendes Abitur
                 konzentrieren müssen und daher wahrscheinlich kaum noch Zeit finden werden, um technische Hilfe zu
@@ -125,7 +125,7 @@
                      alt="Offizielle Verabschiedung der drei Technik-Schüler bei Mitarbeiteressen am 28.07.2022 (V.l.n.r. Geschäftsführer Alexander Mattheus, Sebastian Mach, Tim Zolleis, Linus Groschke)"/><br/><br/>
 
                 Obwohl wir bereits offiziell verabschiedet wurden, werden wir auch dieses Jahr in den Sommerferien noch
-                einiges zutun haben, unser Erbe gut zu hinterlassen.
+                einiges zutun haben, um unser Erbe gut zu hinterlassen.
             </p>
         </div>
     </li>
