Adds embedded GitHub profile for Devicez

--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
         <div class="abstract">
             <p>
                 <img src="/assets/img/devicez.png" width="256" height="256" alt="Devicez Logo"/><br/>
-                <em>Devicez</em> ist mein neustes Freizeitprojekt. Ziel ist es, ein freies und quelloffenes
+                <em>Devicez</em> ist mein neustes Team-Freizeitprojekt. Ziel ist es, ein freies und quelloffenes
                 Geräteverwaltungssystem zu schaffen, das sowohl im Selbst- als auch im Cloud-Betrieb verwendet werden
                 kann.<br/>
-                Derzeit steht das Projekt noch ganz am Anfang. Da ich daran aktuell auch nicht mit höchster Priorität
-                arbeite, kann es auch noch ein wenig dauern, bis ich erste Ergebnisse erziele.
+                Derzeit steht das Projekt noch ganz am Anfang. Da ich daran aktuell auch nicht mit Hochdruck
+                arbeite, kann es auch noch ein wenig dauern, bis ich erste Ergebnisse erziele.<br/><br/>
+                Um auf dem Laufenden zu bleiben, folge gerne unserer GitHub-Organisation:<br/>
             </p>
+            <div class="github-card" data-github="DevicezApp" data-width="400" data-height=""
+                 data-theme="default"></div>
         </div>
     </li>
     <li class="box" style="background-color: dodgerblue;">
@@ -219,6 +222,7 @@
     </p>
 </footer>
 
+<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const modal = document.getElementById('imageModal');
