Fixes missing favicon on legal notice page & adds more important legal text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="twitter:site" content="@elektr0nisch"/>
     <meta property="twitter:creator" content="@elektr0nisch"/>
 
-    <link rel="shortcut icon" type="image/webp" href="assets/img/logo.webp"/>
+    <link rel="shortcut icon" type="image/webp" href="/assets/img/logo.webp"/>
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -216,7 +216,7 @@
 <footer>
     <p>&copy; elektronisch.dev - Alle Rechte vorbehalten.<br/>
         <small>
-            <a href="https://github.com/elektr0nisch/homepage">Quellcode auf GitHub</a><br/>
+            <a href="https://github.com/elektr0nisch/homepage">Quellcode auf GitHub</a>&nbsp;&#8210;
             <a href="/impressum">Impressum</a>
         </small>
     </p>
