--- a/impressum.html
+++ b/impressum.html
@@ -16,7 +16,7 @@
     <meta property="twitter:site" content="@elektr0nisch"/>
     <meta property="twitter:creator" content="@elektr0nisch"/>
 
-    <link rel="shortcut icon" type="image/webp" href="assets/img/logo.webp"/>
+    <link rel="shortcut icon" type="image/webp" href="/assets/img/logo.webp"/>
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -28,11 +28,45 @@
 <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
 <p>Linus Groschke<br/>
     Am Fischertor 8<br/>
-    86152 Augsburg</p>
+    86152 Augsburg<br/>
+</p>
 
 <h2>Kontakt</h2>
 <p>Telefon: +49 151 17636248<br/>
     E-Mail: <a href="javascript:decryptMail('Y29udGFjdEBlbGVrdHJvbmlzY2guZGV2')">contact(at)elektronisch.dev</a></p>
+
+<h2>Haftungsausschluss</h2>
+<b>Haftung für Inhalte</b>
+<p>Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität
+    der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene
+    Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als
+    Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder
+    nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder
+    Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche
+    Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden
+    von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
+
+<b>Urheberrecht</b>
+<p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht.
+    Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes
+    bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind
+    nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom
+    Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche
+    gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen
+    entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
+</p>
+
+<b>Datenschutz</b>
+<p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten
+    personenbezogene Daten (beispielsweise Name, Anschrift oder eMail-Adressen) erhoben werden, erfolgt dies, soweit
+    möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte
+    weitergegeben.
+    Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail)
+    Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.
+    Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht
+    ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen. Die
+    Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von
+    Werbeinformationen, etwa durch Spam-Mails, vor.</p>
 
 <footer>
     <p>&copy; elektronisch.dev - Alle Rechte vorbehalten.<br/>
