--- a/impressum.html
+++ b/impressum.html
@@ -58,7 +58,7 @@
 
 <b>Datenschutz</b>
 <p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten
-    personenbezogene Daten (beispielsweise Name, Anschrift oder eMail-Adressen) erhoben werden, erfolgt dies, soweit
+    personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben werden, erfolgt dies, soweit
     möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte
     weitergegeben.
     Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail)
@@ -71,7 +71,7 @@
 <footer>
     <p>&copy; elektronisch.dev - Alle Rechte vorbehalten.<br/>
         <small>
-            <a href="https://github.com/elektr0nisch/homepage">Quellcode auf GitHub</a><br/>
+            <a href="https://github.com/elektr0nisch/homepage" target="_blank">Quellcode auf GitHub</a>&nbsp;&#8210;
             <a href="/impressum">Impressum</a>
         </small>
     </p>
