--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 <footer>
     <p>&copy; elektronisch.dev - Alle Rechte vorbehalten.<br/>
         <small>
-            <a href="https://github.com/elektr0nisch/homepage">Quellcode auf GitHub</a>&nbsp;&#8210;
+            <a href="https://github.com/elektr0nisch/homepage" target="_blank">Quellcode auf GitHub</a>&nbsp;&#8210;
             <a href="/impressum">Impressum</a>
         </small>
     </p>
