Adds section for political commitment
- Converted all images to .webp
- Changes accent colors
- Changes image alignment

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <p>
     Herzlich willkommen auf meiner bescheidenen Internetpräsenz!
 </p>
-<h2>Projekte</h2>
+<h2>IT-Projekte</h2>
 
 <ul>
     <li class="box" style="background-color: indianred;">
@@ -44,11 +44,11 @@
         </label>
         <div class="abstract">
             <p>
-                <img src="/assets/img/devicez.png" width="256" height="256" alt="Devicez Logo"/><br/>
+                <img src="/assets/img/devicez.webp" width="256" height="256" alt="Devicez Logo"
+                     style="float:left"/><br/>
                 <em>Devicez</em> ist mein neustes Team-Freizeitprojekt. Ziel ist es, ein freies und quelloffenes
                 Geräteverwaltungssystem zu schaffen, das sowohl im Selbst- als auch im Cloud-Betrieb verwendet werden
-                kann.<br/>
-                Derzeit steht das Projekt noch ganz am Anfang. Da ich daran aktuell auch nicht mit Hochdruck
+                kann. Derzeit steht das Projekt noch ganz am Anfang. Da ich daran aktuell auch nicht mit Hochdruck
                 arbeite, kann es auch noch ein wenig dauern, bis ich erste Ergebnisse erziele.<br/><br/>
                 Um auf dem Laufenden zu bleiben, folge gerne unserer <a href="https://github.com/DevicezApp"
                                                                         target="_blank">GitHub-Organisation</a>.
@@ -77,40 +77,40 @@
                 ersten planmäßigen Übertragungen der Hauptunterrichte (ersten zwei Schulstunden an einer Waldorfschule)
                 gemanagt wurden.<br/><br/>
 
-                <img class="fullscreen" src="/assets/img/fwa/it_keller_provisorisch.jpg" width="2560" height="1440"
-                     style="height: 50%; width: 50%"
-                     alt="Provisorische Computerinstallation im Keller der Schule"/>&nbsp;
+                <img class="fullscreen" src="/assets/img/fwa/it_keller_provisorisch.webp" width="2560" height="1440"
+                     style="height: 40%; width: 40%; float: left; margin-right: 10px"
+                     alt="Provisorische Computerinstallation im Keller der Schule"/>
 
-                <img class="fullscreen" src="/assets/img/fwa/uebertragung_2020.jpg" width="921" height="447"
-                     style="height: 50%; width: 50%"
+                <img class="fullscreen" src="/assets/img/fwa/uebertragung_2020.webp" width="921" height="447"
+                     style="height: 46%; width: 46%"
                      alt="Computerbildschirm mit Bildungsplattform und VoiceMeeter"/><br/><br/>
 
                 In den nächsten Wochen richteten wir uns einen vernünftigen Arbeitsplatz her und führten zur besseren
                 Aufgabenverwaltung ein Ticket-System ein, dass sehr bald mit Anfragen und Hilferufen überfüllt war.<br/><br/>
 
-                <img class="fullscreen" src="/assets/img/fwa/ticketsystem.png" width="948" height="364"
-                     style="height: 50%; width: 50%"
-                     alt="Übersichtsgraph der hohen Zahl an Tickets"/>&nbsp;
+                <img class="fullscreen" src="/assets/img/fwa/ticketsystem.webp" width="948" height="364"
+                     style="height: 50%; width: 50%; float: left; margin-right: 10px"
+                     alt="Übersichtsgraph der hohen Zahl an Tickets"/>
 
-                <img class="fullscreen" src="/assets/img/fwa/it_keller_new.jpg" width="2560" height="1440"
-                     style="height: 50%; width: 50%"
-                     alt="Übersichtsgraph der hohen Zahl an Tickets"/><br/><br/>
+                <img class="fullscreen" src="/assets/img/fwa/it_keller_new.webp" width="2560" height="1440"
+                     style="height: 40%; width: 40%"
+                     alt="Frisch gestrichener neuer IT-Raum"/><br/><br/>
 
                 Über die Weihnachtsferien verbesserten wir Hard- und Software und ermöglichten so im neuen Jahr
                 stundenplanmäßigen Online-Unterricht, in Distanz- sowie Hybridform. Eigenentwicklungen wie die
                 Verwaltungssoftware <em>LessonControl</em> und der Einsatz von leistungsfähigen Streaming-Tools wie OBS
                 und VoiceMeeter ermöglichte uns die Verwendung von mehreren Audio- und Videoquellen.<br/><br/>
 
-                <img class="fullscreen" src="/assets/img/fwa/online_stundenplan.png" width="1326" height="664"
-                     style="height: 50%; width: 50%"
-                     alt="Online-Stundenplan der 11. Klasse (BBB = BigBlueButton, d.h. dieser Unterricht war online)"/>&nbsp;
+                <img class="fullscreen" src="/assets/img/fwa/online_stundenplan.webp" width="1326" height="664"
+                     style="height: 40%; width: 40%; float: left; margin-right: 10px"
+                     alt="Online-Stundenplan der 11. Klasse (BBB = BigBlueButton, d.h. dieser Unterricht war online)"/>
 
-                <img class="fullscreen" src="/assets/img/fwa/lessoncontrol.jpg" width="4272" height="2848"
-                     style="height: 50%; width: 50%"
-                     alt="LessonControl Splashscreen"/>&nbsp;
+                <img class="fullscreen" src="/assets/img/fwa/lessoncontrol.webp" width="4272" height="2848"
+                     style="height: 40%; width: 40%"
+                     alt="LessonControl Splashscreen"/>
 
-                <img class="fullscreen" src="/assets/img/fwa/lessoncontrol_console.png" width="966" height="898"
-                     style="height: 50%; width: 50%"
+                <img class="fullscreen" src="/assets/img/fwa/lessoncontrol_console.webp" width="966" height="898"
+                     style="height: 40%; width: 40%"
                      alt="Konsole des LessonControl-Servers"/><br/><br/>
 
                 Durch die Schülerunterstützung und die Bereitschaft unserer Schule diese zuzulassen, konnten wir die
@@ -144,11 +144,12 @@
         </label>
         <div class="abstract">
             <p>
-                <img src="/assets/img/cytooxien.gif" width="300" height="300" alt="Animiertes Cytooxien Logo"/><br/>
+                <img src="/assets/img/cytooxien.webp" width="300" height="300" alt="Animiertes Cytooxien Logo"
+                     style="float: left; padding-right: 20px"/><br/>
                 Ich war von Mai 2020 bis September 2021 Spieleentwickler bei einem der größten deutschen
                 Minecraft-Servernetzwerke namens <em>Cytooxien</em>. Auf Cytooxien spielten zu Hochzeiten bis zu 2000
                 Spieler gleichzeitig in verschiedenen Spielmodi wie z. B. <em>Bedwars, Mario-Party oder
-                SkyBlock</em>.<br/><br/>
+                SkyBlock</em>.<br/><br/><br/><br/>
 
                 Dort entwickelte ich vor allem die Spielschnittstelle (Game-API) names <em>Strider</em>, die als
                 Grundimplementation einige generelle Aufgaben wie z. B. die Team-Einteilung übernahm. Neben diesen
@@ -164,9 +165,71 @@
     </li>
 </ul>
 
+<h2>Politisches Engagement</h2>
+
+<ul>
+    <li class="box" style="background-color: #549670;">
+        <input type="checkbox" id="fff">
+        <label for="fff">
+            <b><a href="https://fff-augsburg.de" target="_blank">Fridays For Future Augsburg</a></b> <br/>
+            <small>
+                seit März 2022<br/>
+                <a>Mehr anzeigen</a>
+            </small>
+        </label>
+        <div class="abstract">
+            <p>
+                <img src="/assets/img/fff.webp" width="889" height="889" alt="Fridays For Future Augsburg Logo"
+                     style="height: 30%; width: 30%; border-radius: 52%; float: left; padding-right: 20px"/><br/>
+                Seit März 2022 engagiere ich mich in der Augsburger FridaysForFuture-Ortsgruppe. Dort helfe ich
+                bei der Organisationen von Demonstrationen, bin selbst Ordner, oder helfe bei der
+                Beschallungstechnik.<br/>
+                Ich engagiere mich, da ich es für die letzte Möglichkeit halte der Klimakrise die Aufmerksamkeit zu
+                verschaffen die Sie benötigt.<br/><br/>
+
+                <b>Diese Krise betrifft uns alle! Mein Motto: Wir müssen JETZT handeln.</b>
+            </p>
+        </div>
+    </li>
+    <li class="box" style="background-color: #549670;">
+        <input type="checkbox" id="klimacamp">
+        <label for="klimacamp">
+            <b><a href="https://www.klimacamp-augsburg.de" target="_blank">Klimacamp Augsburg</a></b> <br/>
+            <small>
+                seit Dezember 2021<br/>
+                <a>Mehr anzeigen</a>
+            </small>
+        </label>
+        <div class="abstract">
+            <p>
+                <img src="/assets/img/klimacamp.webp" width="1080" height="1080" alt="Klimacamp Augsburg Logo"
+                     style="height: 30%; width: 30%; border-radius: 52%; float: left; padding-right: 20px"/><br/>
+                Am 9. Dezember 2021 musste das Klimacamp Augsburg von seinem bisherigen Ort – dem Fischmarkt neben dem
+                Perlachturm am Rathausplatz – zum Moritzplatz umziehen, da Steine vom Perlachturm zu stürzen drohten.
+                Aus reiner Neugier entschied mich mitzuhelfen.<br/><br/><br/>
+
+                Vor Ort fand ich eine aufgeschlossene und engagierte Community vor, die sich sehr um unsere Zukunft
+                sorgte. Von dem Wunsch geleitet meinen Teil zu einer Verbesserung beitragen zu wollen, beschloss ich
+                mich fortan öfter im Camp blicken zu lassen.<br/><br/>
+
+                Das Klimacamp Augsburg ist im Sinne der Versammlungsfreiheit, die in unserem Grundgesetz verankert ist,
+                eine Versammlung. Eine Versammlung, die bereits seit dem 1. Juli 2020 besteht. Damit ist das Camp die
+                längste Versammlung überhaupt! Um den Versammlungsstatus aufrechterhalten zu können, müssen zu jeder
+                Tages- und Nachtzeit mindestens zwei Personen im Camp anwesend sein. Genau das machen wir. Seit zwei
+                Jahren!<br/><br/>
+
+                Dort spreche ich mit Passanten und beantworte ihnen viele Fragen zur Klimakrise, zu Möglichkeiten diese
+                effektiv zu bekämpfen und vielem mehr!<br/>
+                Jede/r ist herzlich eingeladen, das Klimacamp zu besuchen!<br/>
+                <b>Wir campen, bis ihr handelt.</b>
+            </p>
+        </div>
+    </li>
+</ul>
+
 <h2>Kontakt</h2>
 <div style="text-align: center;">
-    <a href="javascript:decryptMail('Y29udGFjdEBlbGVrdHJvbmlzY2guZGV2')">
+    <a href="javascript:decodeMail('Y29udGFjdEBlbGVrdHJvbmlzY2guZGV2')">
         <img src="https://img.shields.io/badge/✉ e--mail-gray.svg?style=for-the-badge"
              alt="E-Mail"/>
     </a>&nbsp;&nbsp;
@@ -249,7 +312,7 @@
         };
     });
 
-    function decryptMail(encoded) {
+    function decodeMail(encoded) {
         const address = atob(encoded);
         window.location.href = 'mailto:' + address;
     }
