--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 <div id="fullsize" onclick="this.style.display='none';"></div>
 
 <div style="text-align: center;">
-    <img src="assets/img/logo.webp" width="200" height="200" alt="Logo" style="border-radius: 50%"/>
+    <img src="assets/img/logo.webp" width="200" height="200" alt="Logo" style="border-radius: 50%">
 </div>
 <h1>Ich bin Linus!</h1>
-<p>
-    Herzlich willkommen auf meiner bescheidenen Internetpräsenz!
+<p style="background-color: gray; border-radius: 9%; text-shadow: 0 0 5px rgba(0,0,0,1);">
+    Linus Groschke, *2003, lebt in Augsburg. Dort besucht er aktuell die zwölfte Klasse der Freien Waldorfschule
+    Augsburg. Er ist technisch sehr interessiert und engagiert sich als Hobby-Programmierer. Bei Fridays For Future und
+    im Klimacamp Augsburg ist er politisch aktiv.
 </p>
 <h2>IT-Projekte</h2>
 
@@ -45,7 +47,7 @@
         <div class="abstract">
             <p>
                 <img src="/assets/img/devicez.webp" width="256" height="256" alt="Devicez Logo"
-                     style="float:left"/><br/>
+                     style="float:left"><br/>
                 <em>Devicez</em> ist mein neustes Team-Freizeitprojekt. Ziel ist es, ein freies und quelloffenes
                 Geräteverwaltungssystem zu schaffen, das sowohl im Selbst- als auch im Cloud-Betrieb verwendet werden
                 kann. Derzeit steht das Projekt noch ganz am Anfang. Da ich daran aktuell auch nicht mit Hochdruck
@@ -68,7 +70,7 @@
         <div class="abstract">
             <p>
                 <img src="/assets/img/fwa.webp" width="1400" height="319" style="height: 70%; width: 70%"
-                     alt="Freie Waldorfschule Augsburg Logo"/><br/>
+                     alt="Freie Waldorfschule Augsburg Logo"><br/>
                 Im November 2020, inmitten der Corona-Pandemie, formierte sich an meiner Schule ein dreiköpfiges
                 Schüler-Team, dass in den nächsten Monaten unglaubliche Arbeit leistete, um dann ab dem 1. Januar 2021
                 stundenplanmäßigen Online-Unterricht anbieten zu können.<br/>
@@ -79,22 +81,22 @@
 
                 <img class="fullscreen" src="/assets/img/fwa/it_keller_provisorisch.webp" width="2560" height="1440"
                      style="height: 40%; width: 40%; float: left; margin-right: 10px"
-                     alt="Provisorische Computerinstallation im Keller der Schule"/>
+                     alt="Provisorische Computerinstallation im Keller der Schule">
 
                 <img class="fullscreen" src="/assets/img/fwa/uebertragung_2020.webp" width="921" height="447"
                      style="height: 46%; width: 46%"
-                     alt="Computerbildschirm mit Bildungsplattform und VoiceMeeter"/><br/><br/>
+                     alt="Computerbildschirm mit Bildungsplattform und VoiceMeeter"><br/><br/>
 
                 In den nächsten Wochen richteten wir uns einen vernünftigen Arbeitsplatz her und führten zur besseren
                 Aufgabenverwaltung ein Ticket-System ein, dass sehr bald mit Anfragen und Hilferufen überfüllt war.<br/><br/>
 
                 <img class="fullscreen" src="/assets/img/fwa/ticketsystem.webp" width="948" height="364"
                      style="height: 50%; width: 50%; float: left; margin-right: 10px"
-                     alt="Übersichtsgraph der hohen Zahl an Tickets"/>
+                     alt="Übersichtsgraph der hohen Zahl an Tickets">
 
                 <img class="fullscreen" src="/assets/img/fwa/it_keller_new.webp" width="2560" height="1440"
                      style="height: 40%; width: 40%"
-                     alt="Frisch gestrichener neuer IT-Raum"/><br/><br/>
+                     alt="Frisch gestrichener neuer IT-Raum"><br/><br/>
 
                 Über die Weihnachtsferien verbesserten wir Hard- und Software und ermöglichten so im neuen Jahr
                 stundenplanmäßigen Online-Unterricht, in Distanz- sowie Hybridform. Eigenentwicklungen wie die
@@ -103,15 +105,15 @@
 
                 <img class="fullscreen" src="/assets/img/fwa/online_stundenplan.webp" width="1326" height="664"
                      style="height: 40%; width: 40%; float: left; margin-right: 10px"
-                     alt="Online-Stundenplan der 11. Klasse (BBB = BigBlueButton, d.h. dieser Unterricht war online)"/>
+                     alt="Online-Stundenplan der 11. Klasse (BBB = BigBlueButton, d.h. dieser Unterricht war online)">
 
                 <img class="fullscreen" src="/assets/img/fwa/lessoncontrol.webp" width="4272" height="2848"
                      style="height: 40%; width: 40%"
-                     alt="LessonControl Splashscreen"/>
+                     alt="LessonControl Splashscreen">
 
                 <img class="fullscreen" src="/assets/img/fwa/lessoncontrol_console.webp" width="966" height="898"
                      style="height: 40%; width: 40%"
-                     alt="Konsole des LessonControl-Servers"/><br/><br/>
+                     alt="Konsole des LessonControl-Servers"><br/><br/>
 
                 Durch die Schülerunterstützung und die Bereitschaft unserer Schule diese zuzulassen, konnten wir die
                 heißen Phasen der Pandemie gut überstehen und so "normal" wie möglich machen. Wegen unseres Einsatzes in
@@ -145,7 +147,7 @@
         <div class="abstract">
             <p>
                 <img src="/assets/img/cytooxien.webp" width="300" height="300" alt="Animiertes Cytooxien Logo"
-                     style="float: left; padding-right: 20px"/><br/>
+                     style="height: 50%; width: 50%; float: left; padding-right: 20px"><br/>
                 Ich war von Mai 2020 bis September 2021 Spieleentwickler bei einem der größten deutschen
                 Minecraft-Servernetzwerke namens <em>Cytooxien</em>. Auf Cytooxien spielten zu Hochzeiten bis zu 2000
                 Spieler gleichzeitig in verschiedenen Spielmodi wie z. B. <em>Bedwars, Mario-Party oder
@@ -180,7 +182,7 @@
         <div class="abstract">
             <p>
                 <img src="/assets/img/fff.webp" width="889" height="889" alt="Fridays For Future Augsburg Logo"
-                     style="height: 30%; width: 30%; border-radius: 52%; float: left; padding-right: 20px"/><br/>
+                     style="height: 30%; width: 30%; border-radius: 52%; float: left; padding-right: 20px"><br/>
                 Seit März 2022 engagiere ich mich in der Augsburger FridaysForFuture-Ortsgruppe. Dort helfe ich
                 bei der Organisationen von Demonstrationen, bin selbst Ordner, oder helfe bei der
                 Beschallungstechnik.<br/>
@@ -203,7 +205,7 @@
         <div class="abstract">
             <p>
                 <img src="/assets/img/klimacamp.webp" width="1080" height="1080" alt="Klimacamp Augsburg Logo"
-                     style="height: 30%; width: 30%; border-radius: 52%; float: left; padding-right: 20px"/><br/>
+                     style="height: 30%; width: 30%; border-radius: 52%; float: left; padding-right: 20px"><br/>
                 Am 9. Dezember 2021 musste das Klimacamp Augsburg von seinem bisherigen Ort – dem Fischmarkt neben dem
                 Perlachturm am Rathausplatz – zum Moritzplatz umziehen, da Steine vom Perlachturm zu stürzen drohten.
                 Aus reiner Neugier entschied mich mitzuhelfen.<br/><br/><br/>
@@ -229,41 +231,41 @@
 
 <h2>Kontakt</h2>
 <div style="text-align: center;">
-    <a href="javascript:decodeMail('Y29udGFjdEBlbGVrdHJvbmlzY2guZGV2')">
+    <a class="badge" style="margin-right: 20px" href="javascript:decodeMail('Y29udGFjdEBlbGVrdHJvbmlzY2guZGV2')">
         <img src="https://img.shields.io/badge/✉ e--mail-gray.svg?style=for-the-badge"
-             alt="E-Mail"/>
-    </a>&nbsp;&nbsp;
-    <a href="https://threema.id/WMU9B4KH">
+             alt="E-Mail">
+    </a>
+    <a class="badge" style="margin-right: 20px" href="https://threema.id/WMU9B4KH">
         <img src="https://img.shields.io/badge/threema-darkblue.svg?logo=threema&style=for-the-badge"
-             alt="Threema"/>
-    </a>&nbsp;&nbsp;
-    <a href="https://matrix.to/#/@elektr0nisch:matrix.org">
+             alt="Threema">
+    </a>
+    <a class="badge" style="margin-right: 20px" href="https://matrix.to/#/@elektr0nisch:matrix.org">
         <img src="https://img.shields.io/badge/matrix-black.svg?logo=matrix&style=for-the-badge"
-             alt="Matrix"/>
-    </a>&nbsp;&nbsp;
+             alt="Matrix">
+    </a>
     <br>
-    <a href="https://twitter.com/elektr0nisch">
+    <a class="badge" style="margin-right: 20px" href="https://twitter.com/elektr0nisch">
         <img src="https://img.shields.io/badge/twitter-elektr0nisch-blue.svg?logo=twitter&style=for-the-badge"
-             alt="Twitter"/>
-    </a>&nbsp;&nbsp;
-    <a href="https://instagram.com/elektr0nisch">
+             alt="Twitter">
+    </a>
+    <a class="badge" style="margin-right: 20px" href="https://instagram.com/elektr0nisch">
         <img src="https://img.shields.io/badge/instagram-elektr0nisch-pink.svg?logo=instagram&style=for-the-badge"
-             alt="Instagram"/>
-    </a>&nbsp;&nbsp;
+             alt="Instagram">
+    </a>
 </div>
 
 <h2>Unterstütze mich</h2>
 <div style="text-align: center;">
     <p>
-        <a href="https://paypal.me/elektr0nisch">
+        <a class="badge" style="margin-right: 20px" href="https://paypal.me/elektr0nisch">
             <img src="https://img.shields.io/badge/paypal-spenden-green.svg?logo=paypal&style=for-the-badge"
                  alt="PayPal"/>
-        </a>&nbsp;&nbsp;
-        <a href="https://buymeacoffee.com/elektr0nisch">
+        </a>
+        <a class="badge" style="margin-right: 20px" href="https://buymeacoffee.com/elektr0nisch">
             <img src="https://img.shields.io/badge/☕ buymeacoffee-spenden-green.svg?style=for-the-badge"
                  alt="buy me a coffee"/>
-        </a>&nbsp;&nbsp;
-        <a href="https://ko-fi.com/elektr0nisch">
+        </a>
+        <a class="badge" style="margin-right: 20px" href="https://ko-fi.com/elektr0nisch">
             <img src="https://img.shields.io/badge/☕ ko--fi-spenden-green.svg?style=for-the-badge"
                  alt="KoFi"/>
         </a>
