Adds rounded corners
- Fixes some minor typos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img src="assets/img/logo.webp" width="200" height="200" alt="Logo" style="border-radius: 50%">
 </div>
 <h1>Ich bin Linus!</h1>
-<p style="background-color: gray; border-radius: 9%; text-shadow: 0 0 5px rgba(0,0,0,1);">
+<p style="background-color: gray; border-radius: 10px; text-shadow: 0 0 5px rgba(0,0,0,1);">
     Linus Groschke, *2003, lebt in Augsburg. Dort besucht er aktuell die zwölfte Klasse der Freien Waldorfschule
     Augsburg. Er ist technisch sehr interessiert und engagiert sich als Hobby-Programmierer. Bei Fridays For Future und
     im Klimacamp Augsburg ist er politisch aktiv.
@@ -186,8 +186,8 @@
                 Seit März 2022 engagiere ich mich in der Augsburger FridaysForFuture-Ortsgruppe. Dort helfe ich
                 bei der Organisationen von Demonstrationen, bin selbst Ordner, oder helfe bei der
                 Beschallungstechnik.<br/>
-                Ich engagiere mich, da ich es für die letzte Möglichkeit halte der Klimakrise die Aufmerksamkeit zu
-                verschaffen die Sie benötigt.<br/><br/>
+                Ich engagiere mich, da ich es für die letzte Möglichkeit halte, der Klimakrise die Aufmerksamkeit zu
+                verschaffen, die sie braucht.<br/><br/>
 
                 <b>Diese Krise betrifft uns alle! Mein Motto: Wir müssen JETZT handeln.</b>
             </p>
