Sets charset to UTF-8

--- a/impressum.html
+++ b/impressum.html
@@ -1,16 +1,18 @@
 ﻿<!DOCTYPE html>
 <html lang="de">
 <head>
+    <meta charset="utf-8">
     <title>Impressum – elektronisch.dev</title>
     <meta name="viewport" content="initial-scale=1"/>
     <meta name="description" content="Yet another computer enthusiast"/>
+    <meta name="robots" content="noindex">
+
     <meta property="og:url" content="https://elektronisch.dev/"/>
     <meta property="og:title" content="Impressum – elektronisch.dev"/>
     <meta property="og:description" content="Yet another computer enthusiast"/>
     <meta property="og:image" content="https://elektronisch.dev/assets/img/logo.png"/>
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="de_DE"/>
-    <meta name="robots" content="noindex">
 
     <meta property="twitter:card" content="summary"/>
     <meta property="twitter:site" content="@elektr0nisch"/>
