--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="de">
 <head>
+    <meta charset="utf-8">
     <title>Startseite – elektronisch.dev</title>
     <meta name="viewport" content="initial-scale=1"/>
     <meta name="description" content="Yet another computer enthusiast"/>
+
     <meta property="og:url" content="https://elektronisch.dev/"/>
     <meta property="og:title" content="Startseite – elektronisch.dev"/>
     <meta property="og:description" content="Yet another computer enthusiast"/>
