--- a/legal_de.html
+++ b/legal_de.html
@@ -74,7 +74,7 @@
     <p>&copy; elektronisch.dev - Alle Rechte vorbehalten.<br/>
         <small>
             <a href="https://github.com/elektr0nisch/homepage" target="_blank">Quellcode auf GitHub</a>&nbsp;&#8210;
-            <a href="/impressum">Impressum</a>
+            <a href="/legal">Impressum</a>
         </small>
     </p>
 </footer>
