Fixes layout for en_US

--- a/index_en.html
+++ b/index_en.html
@@ -53,7 +53,7 @@
                 <em>Devicez</em> is my latest team spare time project. The goal is to create a free and open source
                 device management system that can be used in both standalone and cloud operation. Currently, the project
                 is still in its infancy. Since I am not working on it with high priority at the moment, it might take
-                a while until I get first results.<br/><br/>
+                a while until I get first results.<br/><br/><br/>
                 To stay up to date, feel free to follow our <a href="https://github.com/DevicezApp"
                                                                target="_blank">GitHub organization</a>.
             </p>
